# choresapp

./: .env.sample  .gitignore  Dockerfile  README.md  admin.py  alembic.ini  batch_sample.py  chores.py  entrypoint.sh  main.py  pyproject.toml
chores/: chores.py  lib.py  manager.py  web.py
chores/email/: __init__.py  aws.py  gmail.py
chores/email_service/: __init__.py  aws.py  discord_post.py  gmail.py
chores/models/: choresdb.py
chores/notification_service/: __init__.py  aws.py  discord_post.py  gmail.py
choresdb/: env.py
choresdb/versions/: ab20c670cd00_.py  fa2a248e1f79_.py
cron/: nag-bathroom  nag-countertop  nag-stove  nag-vacuum
data/: chores.json.example
templates/: chores.html
tests/: test_chores.py
