[tool.poetry]
name = "chores"
version = "0.1.0"
description = ""
authors = ["Cam Tenny @cjtenny", "Cam Cope <github.choresapp@camcope.me>"]

[tool.poetry.dependencies]
boto = "^2.35.2"
flask = "^2.0"
python = "~3.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"
pytest = "^5.2"
pylsp-mypy = '^0.5.7'
python-lsp-black = '^1.0.1'
python-lsp-jsonrpc = '^1.0.0'
python-lsp-server = '^1.3.3'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
